# rcc

./: Cargo.toml  README.md
assets/: fib.c  fib_main.c  source.c
src/: cli.rs  main.rs
src/lexical_analysis/: mod.rs  token_matcher.rs  tokens.rs
src/object_file_generator/: mod.rs
src/preprocessing/: mod.rs  remove_comment.rs
src/semantic_analysis/: declaration.rs  expression.rs  mod.rs  statement.rs
src/syntax_analysis/: block_statement.rs  declaration.rs  expression.rs  mod.rs  parameter_definition.rs  statement.rs  top_level.rs  translation_unit.rs  types.rs
