[package]
name = "rcc"
version = "0.1.0"
edition = "2021"
description = "A toy C compiler written in Rust."
repository = "https://github.com/VVsxmja/rcc"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive"] }
either = "1.12.0"
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
lazy_static = "1.4.0"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["tracing", "full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
